--- a/.github/workflows/genericx86-64-ext.yml
+++ b/.github/workflows/genericx86-64-ext.yml
@@ -55,7 +55,7 @@ jobs:
     with:
       machine: genericx86-64-ext
       build-environment: balena-staging.com
-      hostapp-deploy-environment: balena-staging.com
+      deploy-environment: balena-staging.com
       s3-deploy-environment: balena-staging.com
       source-mirror-environment: balena-staging.com
       # device-repo and device-repo-ref inputs should not be provided on device repos
