Test with generic-amd64 v6.5.23+rev1
Signed-off-by: Kyle Harding <kyle@balena.io>

--- a/.github/workflows/genericx86-64-ext.yml
+++ b/.github/workflows/genericx86-64-ext.yml
@@ -53,11 +53,11 @@ jobs:
     if: (github.event.pull_request.head.repo.full_name == github.repository) == (github.event_name == 'pull_request')
     secrets: inherit
     with:
-      machine: genericx86-64-ext
+      machine: generic-amd64
       deploy-environment: balena-staging.com
       # device-repo and device-repo-ref inputs should not be provided on device repos
-      device-repo: balena-os/balena-intel
-      device-repo-ref: master
+      device-repo: balena-os/balena-generic
+      device-repo-ref: v6.5.23+rev1
       # Use qemu workers for testing
       test_matrix: >
         {
