Remove legacy Jenkins deploy scripts
These scripts have been unrolled into the GitHub Action workflow
and are no longer kept up-to-date or tested.

Change-type: minor
Signed-off-by: Kyle Harding <kyle@balena.io>

--- a/.github/workflows/flowzone.yml
+++ b/.github/workflows/flowzone.yml
@@ -50,4 +50,4 @@ jobs:
     with:
       docker_images: |
         ghcr.io/balena-os/balena-yocto-scripts
-      bake_targets: yocto-build-env,balena-push-env
+      bake_targets: yocto-build-env
